reformat level files

--- a/bandit/0-1.md
+++ b/bandit/0-1.md
@@ -1,13 +1,23 @@
 # Bandit 0-1
 
 ## Description
-The password for the next level is stored in a file called readme located in the home
-directory. Use this password to log into bandit1 using SSH.
+The password for the next level is stored in a file called **readme**
+located in the home directory. Use this password to log into bandit1 using SSH.
 
 ## Solution
+This level introduces basic Linux command-line navigation. Here's how
+to retrieve the password:
 
-This level is pretty straightforward. I just listed(ls) the home directory
-then I concatenated(cat) the readme file to STDOUT.
+1. **List the Home Directory**
+    Confirm the presence of the `readme` file:
+    ```bash
+    ls
+    ```
+
+2. **Read the Password File**
+    ```bash
+    cat readme
+    ```
 
 ## Password:
 ZjLjTmM6FvvyRnrb2rfNWOZOTa6ip5If
