--- a/bandit/1-2.md
+++ b/bandit/1-2.md
@@ -3,23 +3,20 @@
 ## Description
 The password for the next level is stored in a file called - located in the home directory
 
-## Solution
+## Solution  
+The challenge involves reading a file named `-`, which is problematic
+because `-` is a reserved symbol in Unix (it represents standard input/output).
+Here’s how to solve it:
 
-At the first moment I tried ```cat -``` but that failed. The prompt cursor went to
-the next line and waited for my input.
+1. **Use the full path**
+    ```bash
+    cat ./-
+    ```
 
-So I checked the cat manual and there's the following line:
-
-**With no FILE, or when FILE is -, read standard input.**
-
-Problem detected. The cat is reading from standard input.
-Now we have some options to work around it.
-
-- 1. Use full location of the file
-```cat ./-```
-
-- 2. Redirect the file's content
-```cat < -```
+2. **Input Redirection**
+    ```bash
+    cat < -
+    ```
 
 ## Password:
 263JGJPfgU6LtdEvgfWU1XP5yac29mFx
