--- a/bandit/2-3.md
+++ b/bandit/2-3.md
@@ -1,21 +1,29 @@
 # Bandit 2-3
 
 ## Description
-The password for the next level is stored in a file called spaces in this filename
-located in the home directory
+The password for the next level is stored in a file called
+**spaces in this filename** located in the home directory.
 
 ## Solution
+When you encounter filenames with spaces, the shell will misinterpret
+them as separate arguments unless handled properly.
+Here's how to resolve it:
 
-At this time I typed ```cat spaces``` then I hit tab key so the shell auto completed
-the filename.
+1. **Tab Completion**
+    Type `cat spaces` and press `<TAB>` to auto-complete the filename:
+    ```bash
+    cat spaces\ in\ this\ filename
+    ```
 
-*It's important to highlight how the spaces could be handled:*
-
-- 1. Escaped
-```cat spaces\ in\ this\ filename```
-
-- 2. Quoted
-```cat "spaces in this filename'```
+2. **Handling Spaces**
+    - Escaped Spaces:
+        ```bash
+        cat spaces\ in\ this\ filename
+        ```
+    - Quoted Filename:
+        ```bash
+        cat "spaces in this filename"
+        ```
 
 ## Password:
 MNk8KNH3Usiio41PRUEoDFPqfxLPlSmx
