--- a/bandit/0.md
+++ b/bandit/0.md
@@ -1,11 +1,15 @@
 # Bandit 0
 
-The goal of this level is for you to log into the game using SSH. The host to which
-you need to connect is bandit.labs.overthewire.org, on port 2220. The username is
-bandit0 and the password is bandit0. Once logged in, go to the Level 1 page to
-find out how to beat Level 1.
+## Description
+The goal of this level is for you to log into the game using SSH.
+The host to which you need to connect is **bandit.labs.overthewire.org**,
+on port **2220**. The username is **bandit0** and the password is **bandit0**
+. Once logged in, go to the Level 1 page to find out how to beat Level 1.
 
-## Connecting to the server
+## Solution
+In order to connect our machine to the game host using SSH we can use
+the SSH client from the command line interface(CLI):
+
 ```bash
 ssh -p 2220 bandit0@bandit.labs.overthewire.org
 ```
