Remove passwords from remote

--- a/bandit/0.md
+++ b/bandit/0.md
@@ -7,9 +7,7 @@ on port **2220**. The username is **bandit0** and the password is **bandit0**
 . Once logged in, go to the Level 1 page to find out how to beat Level 1.
 
 ## Solution
-In order to connect our machine to the game host using SSH we can use
-the SSH client from the command line interface(CLI):
-
+To connect to the server, use the following SSH command:
 ```bash
 ssh -p 2220 bandit0@bandit.labs.overthewire.org
 ```
